Fix visibility storyline safari

--- a/style.css
+++ b/style.css
@@ -96,6 +96,10 @@ font-style: oblique;
   color: inherit !important;
 }
 
+.entry-title{
+  padding: 0% !important;
+}
+
 .collapse{
   visibility: visible;
 }
